--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<script src="renderers/basic.jsonary.js"></script>
 		<script src="renderers/list-schemas.js"></script>
 		<script src="renderers/list-links.js"></script>
-		<script src="renderers/ane/question.js"></script>
+		<!--<script src="renderers/ane/question.js"></script>-->
 		<script src="js/page.index.js"></script>
 		<script>
 			if (window.location.hash == "#" || window.location.hash == "") {
