--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 		<script src="js/jsonary-super-bundle.js"></script>
 		<script src="js/jquery.js"></script>
 		<script src="renderers/list-schemas.js"></script>
-		<script src="renderers/ane/question.js"></script>-->
+		<script src="renderers/ane/question.js"></script>
+		<link rel="stylesheet" href="renderers/ane/question.css">
 
 		<input id="url-bar" value="package.json"/>
 		<div id="go" class="button">Go</div>
