Change default page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<script src="renderers/ane/question.js"></script>
 		<link rel="stylesheet" href="renderers/ane/question.css">
 
-		<input id="url-bar" value="package.json"/>
+		<input id="url-bar" value="edit-questions.php"/>
 		<div id="go" class="button">Go</div>
 		<div id="main"></div>
 
