Remove schema-list renderer

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<body class="jsonary">
 		<script src="js/jsonary-super-bundle.js"></script>
 		<script src="js/jquery.js"></script>
-		<script src="renderers/list-schemas.js"></script>
+		<!--<script src="renderers/list-schemas.js"></script>-->
 		<script src="renderers/ane/question.js"></script>
 		<link rel="stylesheet" href="renderers/ane/question.css">
 
