--- a/app.html
+++ b/app.html
@@ -1,10 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>A&amp;E Communication Tool</title>
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
 		<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  
 		<script src="js/jsonary-super-bundle.js"></script>
 		<script src="renderers/app/question.js"></script>
@@ -18,7 +19,14 @@
 	<body>
 	  <div data-role="page">
 	    <div data-role="content" style="margin: 0; padding: 0">
-	      <div id="nav"></div>
+	      <div id="navBar">
+		<select id="langSelect">
+		  <option value="es">Español</option>
+		  <option value="zh">中文</option>
+		</select>
+		<div id="nav">
+		</div>
+	      </div>
 	      <div id="question" style="margin-left: 330px"></div>
 	    </div>
 	  </div>
