--- a/app.html
+++ b/app.html
@@ -3,8 +3,9 @@
 	<head>
 		<title>A&amp;E Communication Tool</title>
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
-		<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+
+		<script src="js/page.app.js"></script>
+
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  
 		<script src="js/jsonary-super-bundle.js"></script>
@@ -12,22 +13,26 @@
 		<script src="renderers/app/nav.js"></script>
 		<link rel="stylesheet" href="renderers/app/question.css" />
 
-		<script src="js/page.app.js"></script>
 		<link rel="stylesheet" href="css/page.app.css" />
 
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+		<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 	</head>
 	<body>
 	  <div data-role="page">
 	    <div data-role="content" style="margin: 0; padding: 0">
 	      <div id="navBar">
-		<select id="langSelect">
-		  <option value="es">Español</option>
-		  <option value="zh">中文</option>
-		</select>
+		<div class="langSelect">
+		  <select id="langSelect">
+		    <option value="de">Deutsch</option>
+		    <option value="es">Español</option>
+		    <option value="zh">中文</option>
+		  </select>
+		</div>
 		<div id="nav">
 		</div>
 	      </div>
-	      <div id="question" style="margin-left: 330px"></div>
+	      <div id="question" style="margin-left: 300px"></div>
 	    </div>
 	  </div>
 
