Bottom nav dots

--- a/app.html
+++ b/app.html
@@ -28,7 +28,7 @@
 		    <select id="langSelect">
 		      <option value="de">Deutsch</option>
 		      <option value="es">Español</option>
-		      <option value="zh">中文</option>
+		      <option value="zh" selected>中文</option>
 		    </select>
 		  </div>
 		  <div id="nav">
@@ -37,6 +37,7 @@
 		<a class="showHide" href="#"><img src="img/menubutton.png"/></a>
 	      </div>
 	      <div id="question"></div>
+	      <div id="bottomNav"></div>
 	    </div>
 	  </div>
 
